# logsurfer

./: ChangeLog  DISCLAIMER  Makefile.in  README  TODO  config.h.in  configure  configure.in  logsurfer_1.8.orig.tar.gz.delta  logsurfer_1.8.orig.tar.gz.id
contrib/: README
contrib/prtime/: README  prtime.c
contrib/start-mail/: README  start-mail
debian/: README.Debian  changelog  control  copyright  dirs  rules  watch
debian/patches/: fix-hardening  fix-logsurfer-spelling  fix-manpage-hyphons  fix-manpage-section  fix-manpage-spelling  series
man/: Makefile.in  logsurfer.1.in  logsurfer.conf.4.in
regex/: README  regex.ps
src/: Makefile.in  context.c  context.h  exec.c  exec.h  exit.c  exit.h  globals.h  logsurfer.c  logsurfer.h  readcf.c  readcf.h  readline.c  readline.h  regex.c  report.c  report.h  rule.c  rule.h  str_util.c  str_util.h
