dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/logsurfer.h)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Checks for brain dead systems
AC_AIX

dnl Checks for libraries.
dnl Replace `main' with a function in -lgen:
AC_CHECK_LIB(gen, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_HEADER_TIME
AC_CHECK_HEADERS(sys/time.h stdlib.h malloc.h string.h strings.h limits.h unistd.h sys/resource.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_CHECK_FUNCS(strchr index memmove bcopy)

dnl Check for --with-etcdir.
AC_MSG_CHECKING(etcdir)
AC_ARG_WITH(etcdir,
[  --with-etcdir=PATH      Directory for logsurfer.conf \[/usr/local/etc\]],
[ case "$withval" in
  no)
    AC_MSG_ERROR(etcdir is obligatory.)
    ;;
  yes)
    etcdir="/usr/local/etc"
    ;;
  *)
    etcdir="$withval"
    ;;
  esac ],
[ etcdir="/usr/local/etc"
])
AC_MSG_RESULT($etcdir)
AC_SUBST(etcdir)

AC_OUTPUT(Makefile src/Makefile man/Makefile, echo timestamp > stamp-h)
